# LOEF_drawer

./: .gitignore  CMakeLists.txt  LOEF_QPainter.cpp  LOEF_QPainter.hpp  README.md  README_ja.md  basic_charge.hpp  charge_pen.cpp  charge_pen.hpp  charges.hpp  fixed_charge_editors_container.cpp  fixed_charge_editors_container.hpp  fixed_charge_editors_container.ui  general_consts.template.hpp  loef_drawer.cpp  loef_drawer.hpp  loef_individual_fixed_charge_editor.cpp  loef_individual_fixed_charge_editor.hpp  loef_individual_fixed_charge_editor.ui  main.cpp  main_resources.qrc  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_consts.hpp  qt_message_handler.cpp  qt_message_handler.hpp  qt_toml_settings.cpp  qt_toml_settings.hpp  tools.cmake  vec2d.cpp  vec2d.hpp
.github/workflows/: cmake.yml
experimental/: differential_equation.cpp  differential_equation.hpp  electric_potential.cpp  electric_potential.hpp  experimental_helper.cpp  experimental_helper.hpp  lazy_helper.cpp  lazy_helper.hpp
libs/: CMakeLists.txt
libs/header/: CMakeLists.txt  LOEF_QPainter.hpp  basic_charge.hpp  buildtime_info.hpp  buildtime_info_impl.template.hpp  charge_pen.hpp  charges.hpp  debug_outputs.hpp  fixed_charge.hpp  general_consts.hpp  general_consts.template.hpp  math.hpp  units.hpp  vec2d.hpp
libs/src/: CMakeLists.txt  LOEF_QPainter.cpp  basic_charge.cpp  charge_pen.cpp  fixed_charge.cpp  vec2d.cpp
resources/: LOEF2.xcf  about_LOEF_drawer_en.html  about_LOEF_drawer_ja.html
templates/: circle.json  circle_small_template.toml  circle_template.toml  create_template.py  lines.json  lines_small_template.toml  lines_template.toml
translations/: LOEF_drawer_ja.ts
